2006-06-27  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Added pitivi to extras.

2006-06-26  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Added gimmie to extras.

2006-06-20  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: file-roller has been
	branched for gnome-2-14.

2006-06-19  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: gnome-system-monitor has been
	branched for gnome-2-14.

2006-06-18  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: atk and at-spi have been
	branched for gnome-2-14.

2006-06-16  Vincent van Adrighem  <adrighem@gnome.org>

	* translation-status.xml: Bug-buddy silently branched gor gnome-2-14.

2006-06-12  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Moved alacarte, orca,
	gnome-power-manager, and tomboy to proposed.

2006-06-11  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Added alacarte to extras.

2006-06-11  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: gok has been (silently)
	branched for gnome-2-14.

2006-06-10  Funda Wang  <fundawang@linux.net.cn>

	* translation-status.xml: Corrected ekiga's POT name.

2006-06-05  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Added lsr to extras.

2006-06-04  Funda Wang  <fundawang@linux.net.cn>

	* translation-status.xml: gedit-plugins lives again.

2006-06-04  Funda Wang  <fundawang@linux.net.cn>

	* translation-status.xml: zenity HEAD is using non-versioned domain now.

2006-05-26  Funda Wang  <fundawang@linux.net.cn>

	* translation-status.xml: Added resapplet module into extras.

2006-05-24  Kjartan Maraas  <kmaraas@gnome.org>

	* translation-status.xml: Updated branch info for 2.14.x.

2006-05-18  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: ekiga and gnome-system-tools have been
	branched for gnome-2-14.

2006-05-14  Christian Rose  <menthos@menthos.com>
