@@ -2124,6 +2124,17 @@
       </component>
     </version>
   </module>
+  <module name="istanbul">
+    <version release="HEAD">
+      <component name="istanbul" dir="istanbul" group="extras">
+        <podir dir="po"/>
+        <potname name="istanbul.pot"/>
+        <branch name="HEAD"/>
+        <regenerate/>
+        <download/>
+      </component>
+    </version>
+  </module>
   <module name="jamboree">
     <version release="HEAD">
       <component name="jamboree" dir="jamboree" group="extras">
